--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
 *.class
 
+# Eclipse 
+/.settings
+.project
+.classpath
+
+# Mac System Files #
+.DS_Store
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+# Maven temporary
+/target
 
 # Package Files #
 *.jar
